--- a/views/borrow.ejs
+++ b/views/borrow.ejs
@@ -9,7 +9,10 @@
     <%- include('header.ejs') %>
     <main>
         <section id="hero">
-            <h1><%= locals.member. ></h1>           
+            <h1>Borrow Book</h1>     
+            
+            
+
         </section>
     </main>
     <footer>
