--- a/views/404.ejs
+++ b/views/404.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library App</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <%- include('header.ejs') %>
@@ -15,6 +16,7 @@
     </main>
     <footer>
         <p> LibApp &copy; <%= new Date().getFullYear() %> . All rights Reserved. </p>
+        <p>Library App</p>
     </footer>
 </body>
 </html>
