--- a/views/authors.ejs
+++ b/views/authors.ejs
@@ -4,19 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library App</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/authors.css">
 </head>
 <body>
     <%- include('header.ejs') %>
     <main>
+        <style>
+            label,input,select{
+                display: inline;
+            }
+        </style>
         <section id="hero">
             <h1>Authors</h1>
             <!-- optional chaining -->
-            <% if(locals?.user?.Email == "john@gmail.com"){ %>
+            <% if(locals?.user?.Email === "john@gmail.com"){ %>
             <form action="/newauthor" method="post" >
                 <label for="id">ID</label>
                 <input type="number" name="id" id="id" required>
                 <label for="name">Name</label>
-                <input type="text" name="name" id="name" required>
+                <input type="text" name="name" id="name" required> <br>
                 <label for="YOB">YOB</label>
                 <select name="YOB" id="YOB">
                     <% for(let year = 2024; year>1970; year--){ %>
@@ -24,7 +32,7 @@
                     <%}%>
                 </select>
                 <label for="nationality">Nationality</label>
-                <input type="text" name="nationality" id="nationality" required>
+                <input type="text" name="nationality" id="nationality" required> <br>
                 <label for="bio">Biography</label>
                 <textarea name="bio" id="bio" cols="30" rows="4" required></textarea>
                 <input type="submit" value="Add Author">
@@ -34,12 +42,12 @@
               
                 <%  if(locals.authors){  %>
                     <ul>
-                        <% locals.authors.forEach(auth=>{ %>
+                        <% locals.authors.reverse().forEach(auth=>{ %>
                         <li> 
                             <h2><%= auth.FullName %></h2>
-                            <p>Nationality:<%= auth.Nationality %></p>
-                            <p>YOB: <%= auth.YOB %></p>
-                            <p>Biography</p>
+                            <p><span>Nationality:</span><%= auth.Nationality %></p>
+                            <p><span>YOB</span> <%= auth.YOB %></p>
+                            <p><span>Biography</span></p>
                             <p> <%= auth.Biography %> </p>
                         </li>
                         <% }) %>
@@ -49,20 +57,12 @@
                 <% } %>
             
             
-                <style>
-                    ul{
-                        display: flex;
-                        flex-wrap: wrap;
-                    }
-                    li{
-                        width: 22%;
-                    }
-                </style>
             </div>
         </section>
     </main>
     <footer>
         <p> LibApp &copy; <%= new Date().getFullYear() %> . All rights Reserved. </p>
+        <p>Library App</p>
     </footer>
 </body>
 </html>
