--- a/views/book.ejs
+++ b/views/book.ejs
@@ -7,6 +7,7 @@
     <style>
         .flex{display: flex;} 
     </style>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <%- include('header.ejs') %>
@@ -34,6 +35,7 @@
     </main>
     <footer>
         <p> LibApp &copy; <%= new Date().getFullYear() %> . All rights Reserved. </p>
+        <p>Library App</p>
     </footer>
 </body>
 </html>
