--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,6 +1,7 @@
 <header>
     <a href="/" id="logo"> LibApp </a>
     <nav>
+        <a href="/">Home</a>
         <a href="/authors">Authors</a>
         <a href="/books">Books</a>
         <% if(locals.user){ %>
@@ -8,6 +9,7 @@
                <a href="/logout">Logout</a>
         <% }else{ %>
                 <a href="/signin">Sign In</a>
+                <a href="/signup">Sign Up</a>
         <% } %>
 
     </nav>
