--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library App</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <%- include('header.ejs') %>
     <main>
         <section id="hero">
             <h1>Manage Your Library with Ease</h1>
-            <p>LibApp puts the convenience of borrowing and managing your library account right in your pocket.</p>
+            <p>Transforming library management into a streamlined experience.</p>
         </section>
         <section>
             <h2>Most Read Books</h2>
@@ -21,6 +23,7 @@
     </main>
     <footer>
         <p> LibApp &copy; <%= new Date().getFullYear() %> . All rights Reserved. </p>
+        <p>Library App</p>
     </footer>
 </body>
 </html>
